[tool.poetry]
name = "sqsx"
version = "0.5.0"
description = "A simple task processor for Amazon SQS"
authors = ["Allisson Azevedo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.33.13"
pydantic = "^2.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "3.5.0"

[tool.poetry.group.release.dependencies]
wheel = "^0.42.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-vvv --cov=sqsx --cov-report=term-missing"
